# collins-cybersecurity

./: README.md  Vagrantfile  dbCreate.sql
.vagrant/machines/client/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
.vagrant/machines/server/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key
VT_NITFReader_library/: CMakeCache.txt  CMakeLists.txt  Makefile  NITFFile.cpp  NITFFile.h  VT_NITFReader  VT_NITFReader.cpp  cmake_install.cmake  install_manifest.txt  nitf_file_data_extraction.py
VT_NITFReader_library/install/run/: runNITFReader.sh
